--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dummyText">Sodales varius senectus aenean molestie. Erat aptent dolor dignissim. Hendrerit risus libero tincidunt ut, facilisis iaculis sagittis sagittis augue. </string>
+    <string name="developer_name">Developed by Sarath Sattiraju</string>
+    <string name="refresh">Refresh</string>
+    <string name="info">Info</string>
+    <string name="search">search</string>
 </resources>
